--- a/exercise-5/styles.css
+++ b/exercise-5/styles.css
@@ -17,6 +17,8 @@ body {
 
 .card:hover {
   box-shadow: 0 0 0 1px #ccc, 0 0 64px 32px rgba(0, 0, 255, 0.2);
+  position: relative;
+  z-index: 999;
 }
 
 .grid {
