--- a/exercise-6/styles.css
+++ b/exercise-6/styles.css
@@ -53,3 +53,15 @@ body {
 .button__three {
   left: 96px;
 }
+
+.button__one:hover ~ .bulb:nth-child(3n-2) {
+  background-color: yellow;
+}
+
+.button__two:hover ~ .bulb:nth-child(3n-1) {
+  background-color: yellow;
+}
+
+.button__three:hover ~ .bulb:nth-child(3n) {
+  background-color: yellow;
+}
